--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+	<script src="../assets/androidjs.js">
+	</script>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -232,7 +234,6 @@ margin-bottom: 50px;
 
 
 </style>
-<script src="../assets/androidjs.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
     navActivePage();
