--- a/views/index.html
+++ b/views/index.html
@@ -266,31 +266,31 @@ const gsphy = "https://us05web.zoom.us/j/2284078501?pwd=bWt5OEFaNG5CWGNqQmxvRmxw
 
  function join(num){
 if (num == -1){
- 		window.location.replace(gscomp)
+ 		app.loadURL(gscomp)
  	}
  	else if (num == -2){
- 		window.location.replace(gseng)
+ 		app.loadURL(gseng)
  	}
  	else if (num == -3){
- 		window.location.replace(gssst)
+ 		app.loadURL(gssst)
  	}
  	else if (num == -4){
- 		window.location.replace(gspp)
+ 		app.loadURL(gspp)
  	}
  	else if (num == -5){
- 		window.location.replace(gsbio)
+ 		app.loadURL(gsbio)
  	}
  	else if (num == -6){
- 		window.location.replace(gsmath)
+ 		app.loadURL(gsmath)
  	}
  	else if (num == -7){
- 		window.location.replace(gshindi)
+ 		app.loadURL(gshindi)
  	}
  	else if (num == -8){
- 		window.location.replace(gssnk)
+ 		app.loadURL(gssnk)
  	}
  	else if (num == -9){
- 		window.location.replace(gsphy)
+ 		app.loadURL(gsphy)
  	}
  }
  
